manifests/deployment-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: notification
  name: notification
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: notification
    spec:
      containers:
      - image: onikaze/sample-app-k8s-notification:14
        name: notification
        resources: {}
        volumeMounts:
          - name: app-storage
            mountPath: /app/log
            subPath: log
          - name: app-storage
            mountPath: /app/db
            subPath: db
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-notification-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5003
    nodePort: 30303
  selector:
    app: notification
