manifests/deployment-post.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: post
  name: post
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: post
    spec:
      containers:
      - image: onikaze/sample-app-k8s-post:latest
        name: post
        resources: {}
        volumeMounts:
          - name: app-storage
            mountPath: /app/log
            subPath: log
          - name: app-storage
            mountPath: /app/db
            subPath: db
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-post-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
  labels:
    app: post-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5002
  selector:
    app: post
