manifests/deployment-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user
  name: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user
    spec:
      containers:
      - image: onikaze/sample-app-k8s-user:14
        name: user
        resources: {}
        volumeMounts:
          - name: app-storage
            mountPath: /app/log
            subPath: log
          - name: app-storage
            mountPath: /app/db
            subPath: db
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-user-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5001
    nodePort: 30301
  selector:
    app: user
