manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5001
  selector:
    app: user
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
  labels:
    app: post-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5002
  selector:
    app: post
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5003
  selector:
    app: notification
