manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:  
  - host: www.example.com
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 80
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
